--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     background-color: rgba(60, 147, 94, 0.931);
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .login{
     width:300px;
@@ -11,7 +11,10 @@ body{
     margin: auto;
     margin-bottom: 10px;
     margin-top: 90px;
-    padding: 50px;
+    padding-left: 50px;
+    padding-right: 57px;
+    padding-bottom: 80px;
+    padding-top: 40px;
     background:rgb(77, 74, 74);
     border-radius: 15px;
     
@@ -26,7 +29,7 @@ label{
 }
 #Uname{
     width: 300px;
-    height: 30px;
+    height: 37px;
     border: none;
     border-radius: 3px;
     padding-left: 8px;
@@ -34,21 +37,25 @@ label{
 }
 #Pass{
     width: 300px;
-    height: 30px;
+    height: 37px;
     border: none;
     border-radius: 3px;
     padding-left: 8px;
+    margin-bottom: 5px;
 }
 #log{
-    width: 100px;
-    height: 30px;
+    width: 309px;
+    height: 35px;
     border: none;
     border-radius: 5px;
-    color:black;
-    transition: transform 0.3s;
+    color:rgb(62, 54, 54);
+    transition: transform 0.2s;
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-family: georgia;
 }
 #log:hover {
-  transform: scale(1.1);
+  transform: scale(1.0);
   background-color:rgba(60, 147, 94, 0.931) ;
 }
 span{
